Fix text overflow in new tread button on narrow displays

--- a/less/themes/pirat.less
+++ b/less/themes/pirat.less
@@ -99,6 +99,7 @@
   box-shadow: unset;
   font-weight: bold;
   text-shadow: unset;
+  white-space: normal;
 }
 
 // Typography =================================================================
